feat(pcomparator): implement searchbar for prices (#75)
